@@ -1,3 +1,8 @@
+* Fixed loading version
+* Party and Raid won't show in the menu if you aren't in one
+* Added broadcasting to System, Party, Raid, Guild and Say
+* Minimap now saves position
+
 ===== 2.0 =====
 * Moved over to Ace3, sorry but this addon was getting to big to not use libs
 -- This also means it is a class layout and should be much esier to introduce LDB and UI's
@@ -14,5 +19,6 @@
 * Removed no-lib version until i figure it out
 
 ===== To-Do =====
-* Reporting of party/raid to party/raid/guild/say/tell
-* UI for showing party/raid/cache
+* Reporting of party/raid to tell
+* UI for showing party/raid/cache'
+* no-lib option
